-Fixed an error with the pictures showing too big for higher resolution windows

--- a/src/components/pages/homepage/ScrollList/ScrollList.css
+++ b/src/components/pages/homepage/ScrollList/ScrollList.css
@@ -1,4 +1,5 @@
-.zindex{
+.hidden-at-start{
     z-index: 1;
-    /* opacity: 1; */
+    overflow: hidden;
+    opacity: 0;
 }
