--- a/src/components/pages/picturePage/PicturePage.css
+++ b/src/components/pages/picturePage/PicturePage.css
@@ -9,3 +9,13 @@
 .image-show-right-cursor{
     cursor: url('/public/assets/right-arrow.png'),auto;
 }
+
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
+  }
